codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__feedback_good_result_consent_popup.snap
---
source: tui/src/chatwidget/tests.rs
expression: popup
---
  Upload logs?

  The following files will be sent:
    • codex-logs.log
    • codex-connectivity-diagnostics.txt

› 1. Yes  Share the current Codex session logs with the team for
          troubleshooting.
  2. No

  Нажмите enter для подтверждения или esc для возврата
