codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__interrupt_clears_unified_exec_wait_streak.snap
---
source: tui/src/chatwidget/tests.rs
expression: snapshot
---
cells=1
■ Диалог прерван. Укажите модели, что делать иначе. Если что-то сломалось, используйте `/feedback`, чтобы отправить отчёт.
