codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__interrupted_turn_error_message.snap
---
source: tui/src/chatwidget/tests.rs
expression: last
---
■ Диалог прерван. Укажите модели, что делать иначе. Если что-то сломалось, используйте `/feedback`, чтобы отправить отчёт.
